--- a/fetch_api/index.html
+++ b/fetch_api/index.html
@@ -1,22 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
-  <title>Ajax Sandbox</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Fetch API Sandbox</h1>
-    <button id="button1">Get Text</button> 
-    <button id="button2">Get JSON</button>
-    <button id="button3">Get API Data</button>
-    <br><br>
-    <div id="output"></div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
+    />
+    <title>Fetch API Ajax Sandbox</title>
+    <style>
+      nav {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to bottom, #89fffd, #ef32d9);
+        width: 100px;
+      }
+      ol {
+        list-style-type: none;
+        /* padding-top: 2rem; */
+      }
+      li,
+      a {
+        color: magenta;
+        text-decoration: none;
+      }
 
-  <script src="app.js"></script>
-</body>
+      li:nth-child(even) {
+        color: cyan;
+      }
+
+      .container {
+        margin-top: 5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <ol class="menu">
+        <li class="hover">
+          <a href="../index.html">Home</a>
+        </li>
+      </ol>
+    </nav>
+    <div class="container">
+      <h1>Fetch API</h1>
+      <p>Using ES6</p>
+      <button id="button1">Get Text</button>
+      <button id="button2">Get JSON</button>
+      <button id="button3">Get API Data</button>
+      <br /><br />
+      <div id="output"></div>
+    </div>
+
+    <script src="nav.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
