--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern JS 2</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style-nav.css" />
   </head>
   <body>
     <h1>Modern JS Course From The Beginning</h1>
@@ -28,13 +28,6 @@
       </ol>
     </nav>
 
-    <script>
-      Array.from(document.querySelectorAll(".hover"), function (el) {
-        el.addEventListener("mousemove", function (e) {
-          el.style.setProperty("--px", e.clientX - el.offsetLeft);
-          el.style.setProperty("--py", e.clientY - el.offsetTop);
-        });
-      });
-    </script>
+    <script src="nav.js"></script>
   </body>
 </html>
