--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ol class="menu">
         <li class="hover">
-          <a href="./fetch_api/index.html"
+          <a href="./fetch_api/index-fetch-api.html"
             >Section 7 <small> - Fetch API</small></a
           >
         </li>
