--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <ol class="menu">
         <li class="hover">
           <a href="./fetch_api/index-fetch-api.html"
-            >Section 7 <small> - Fetch API</small></a
+            >Section 7
+            <small> - Fetch API, Arrow Functions, Custom Library</small></a
           >
         </li>
         <li class="hover">Section 8</li>
