--- a/fetch_api/index-fetch-api.html
+++ b/fetch_api/index-fetch-api.html
@@ -15,27 +15,36 @@
         padding: 0;
       }
       nav {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-
         margin: 0;
         padding: 0;
         background: linear-gradient(to bottom, #89fffd, #ef32d9);
-        width: 100px;
+        width: 100%;
+        height: 50px;
       }
       ol {
         list-style-type: none;
-        flex-direction: column;
+        /* padding-top: 2rem; */
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
       }
       li,
       a {
-        color: magenta;
+        color: black;
         text-decoration: none;
+        align-items: center;
+        margin-top: 1rem;
       }
 
       li:nth-child(even) {
         color: cyan;
+      }
+
+      code {
+        width: fit-content;
+        margin: 2rem;
+        font-size: medium;
       }
 
       .container {
@@ -55,6 +64,11 @@
         <li class="hover">
           <a href="./arrow_functions/index_arrow_functions.html"
             >Arrow Functions</a
+          >
+        </li>
+        <li class="hover">
+          <a href="../http_library_fetch_promises/index_http_library_fetch.html"
+            >Custom Library</a
           >
         </li>
       </ol>
@@ -78,6 +92,7 @@
         function for error handling.
       </p>
       <code>
+        <br />
         function handleErrors(res) {<br />
         &nbsp;&nbsp;&nbsp;&nbsp;if (!res.ok) throw new Error(res.error);<br />
         &nbsp;&nbsp;&nbsp;&nbsp;return res;<br />
