--- a/fetch_api/arrow_functions/index_arrow_functions.html
+++ b/fetch_api/arrow_functions/index_arrow_functions.html
@@ -81,6 +81,14 @@
             >Custom Library</a
           >
         </li>
+        <li class="hover">
+          <a href="../../async_await/index-async-await.html">Async & Await</a>
+        </li>
+        <li class="hover">
+          <a href="../../library-final/index-library-final.html"
+            >Library-Fetch Async Await</a
+          >
+        </li>
       </ol>
     </nav>
     <div class="container">
