--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <ol class="menu">
         <li class="hover">
           <a href="./fetch_api/index-fetch-api.html"
-            >Section 7
-            <small> - Fetch API, Arrow Functions, Custom Library</small></a
+            >Section 7<br />
+            <small>
+              - Fetch API, Arrow Functions, Custom Library, Async & Await,
+              Library-Fetch Async Await</small
+            ></a
           >
         </li>
         <li class="hover">Section 8</li>
