--- a/library-final/index-library-final.html
+++ b/library-final/index-library-final.html
@@ -98,7 +98,7 @@
       <!-- end of container -->
     </div>
 
-    <script src="easyhttp3.js"></script>
-    <script src="app.js"></script>
+    <script src="./easyhttp3.js"></script>
+    <script src="./app-library-final.js"></script>
   </body>
 </html>
