--- a/repofinder/index.html
+++ b/repofinder/index.html
@@ -52,6 +52,9 @@
         <li class="hover">
           <a href="#">Github Finder</a>
         </li>
+        <li class="hover">
+          <a href="../weather/index.html">Weather</a>
+        </li>
       </ol>
     </nav>
 
