--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             ></a
           >
         </li>
-        <li class="hover"><a href="./repofinder/index.html">Section 8</a></li>
+        <li class="hover">
+          <a href="./repofinder/index.html"
+            >Section 8 <br /><small>GitHub Finder & Weather</small></a
+          >
+        </li>
         <li class="hover">Section 9</li>
         <li class="hover">Section 10</li>
         <li class="hover">Section 11</li>
