--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern JS 2</title>
-    <link rel="stylesheet" href="style-nav.css" />
-  </head>
-  <body>
-    <h1>Modern JS Course From The Beginning</h1>
-    <!-- <h2>Async Ajax Fetch API</h2> -->
-    <h3>Brad Traversy</h3>
 
-    <nav>
-      <ol class="menu">
-        <li class="hover">
-          <a href="./fetch_api/index-fetch-api.html"
-            >Section 7<br />
-            <small>
-              - Fetch API, Arrow Functions, Custom Library, Async & Await,
-              Library-Fetch Async Await</small
-            ></a
-          >
-        </li>
-        <li class="hover">
-          <a href="./repofinder/index.html"
-            >Section 8 <br /><small>GitHub Finder & Weather</small></a
-          >
-        </li>
-        <li class="hover">Section 9</li>
-        <li class="hover">Section 10</li>
-        <li class="hover">Section 11</li>
-        <li class="hover">Section 12</li>
-        <li class="hover hover--blue">Section 13</li>
-      </ol>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Modern JS 2</title>
+  <link rel="stylesheet" href="style-nav.css" />
+</head>
 
-    <script src="nav.js"></script>
-  </body>
+<body>
+  <h1>Modern JS Course From The Beginning</h1>
+  <!-- <h2>Async Ajax Fetch API</h2> -->
+  <h3>Brad Traversy</h3>
+
+  <nav>
+    <ol class="menu">
+      <li class="hover">
+        <a href="./fetch_api/index-fetch-api.html">Section 7<br />
+          <small>
+            - Fetch API, Arrow Functions, Custom Library, Async & Await,
+            Library-Fetch Async Await</small></a>
+      </li>
+      <li class="hover">
+        <a href="./repofinder/index.html">Section 8 <br /><small>GitHub Finder & Weather</small></a>
+      </li>
+      <li class="hover"><a href="./errors_reg_expressions/index_errors.html">Section 9 <br /><small>Errors & Regular
+            Expressions</small></a></li>
+      <li class="hover">Section 10</li>
+      <li class="hover">Section 11</li>
+      <li class="hover">Section 12</li>
+      <li class="hover hover--blue">Section 13</li>
+    </ol>
+  </nav>
+
+  <script src="nav.js"></script>
+</body>
+
 </html>
