JS Patterns notes

--- a/Patterns/observer pattern/index.html
+++ b/Patterns/observer pattern/index.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JavaScript Sandbox: Patterns</title>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body>
-  <h1>JavaScript Sandbox: Patterns</h1>
-  <button class="sub-ms">Subscribe to Milliseconds</button>
-  <button class="unsub-ms">Unsubscribe from Milliseconds</button>
+<body class="m-5">
+  <h1>Observer Patterns</h1>
+  <button class="btn btn-info sub-ms">Subscribe to Milliseconds</button>
+  <button class="btn btn-info unsub-ms">Unsubscribe from Milliseconds</button>
   <br><br>
-  <button class="sub-s">Subscribe to Seconds</button>
-  <button class="unsub-s">Unsubscribe from Seconds</button>
+  <button class="btn btn-info sub-s">Subscribe to Seconds</button>
+  <button class="btn btn-info unsub-s">Unsubscribe from Seconds</button>
   <br><br>
-  <button class="fire">Fire</button>
+  <button class="btn btn-danger fire">Fire</button>
+  <br>
+  <br>
+  <a href="../patterns_index.html">< return to patterns</a>
 
   <script src="appes6.js"></script>
+  <!-- bootstrap -->
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+
 </body>
 
 </html>
