began project Tracalorie

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
       </li>
       <li class="hover"><a href="./errors_reg_expressions/index_errors.html">Section 9 <br /><small>Errors & Regular
             Expressions</small></a></li>
-      <li class="hover">Section 10</li>
-      <li class="hover">Section 11</li>
-      <li class="hover">Section 12</li>
+      <li class="hover">
+        <a href="./iterators_generators/index.html">Section 10 <br /><small>Iterators & Generators</small></a>
+        <a href="./iterators_generators_profilescroller/index.html"><br /><small>Profile Scroller</small></a>
+      </li>
+      <li class="hover">
+        <a href="./Patterns/patterns_index.html">Section 11 <br /><small>Patterns</small></a></li>
+      <li class="hover">
+        <a href="./Meal Tracker/index.html">Section 12 <br /><small>Food Tracker</small></a>
+      </li>
       <li class="hover hover--blue">Section 13</li>
     </ol>
   </nav>
