--- a/Meal Tracker/index.html
+++ b/Meal Tracker/index.html
@@ -30,6 +30,12 @@
         </div>
     </nav>
     <br>
+    <p class="center">
+        <small>Meal & calorie tracker
+            Built using Vanilla JS. Modular pattern, local storage, material ui
+            Controllers: storage, item, ui , main app</small>
+    </p>
+    <br>
     <div class="container">
         <div class="card">
             <div class="card-content">
@@ -42,13 +48,13 @@
                         </div>
                         <div class="input-field col s6">
                             <label for="item-calories">Calories</label>
-                            <input type="text" placeholder="Add Calories" id="item-calories">
+                            <input type="number" placeholder="Add Calories" id="item-calories">
                         </div>
                         <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i> Add Meal</button>
 
-                        <!-- <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
+                        <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
 
-                        <button class="delete-btn btn red"><i class="fa fa-remove"></i> Delete Meal</button> -->
+                        <button class="delete-btn btn red"><i class="fa fa-remove"></i> Delete Meal</button>
 
                         <button class="back-btn btn grey pull-right"><i class="fa fa-chevron-circle-left"></i>
                             Back</button>
@@ -66,12 +72,7 @@
     </div>
 
 
-    <footer class="">
-        <small>Meal & calorie tracker
-            Built using Vanilla JS. Modular pattern, local storage, material ui
-            Controllers: storage, item, ui , main app
-        </small>
-    </footer>
+
     <script src="app.js"></script>
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
